2006-08-29  Richard Levitte  <richard@levitte.org>

	* automate.cc (AUTOMATE(get_option)): I did the output
	incorrectly to `std::cout' instead of the `output' stream.

2006-08-28  Richard Levitte  <richard@levitte.org>

	* cmd.hh (ALIAS): Rework so gettext() can do its job properly,
	and get the alias description string translated as well.
	* po/sv.po: Translate the alias description string.

2006-08-28  Richard Levitte  <richard@levitte.org>

	* po/POTFILES.in: Oh look, automate.cc was missing!
	* po/sv.po: Adding automate.cc resulted in 7 new fuzzies and 9
	new untranslated strings.  Fixed.

2006-08-28  Richard Levitte  <richard@levitte.org>

	* automate.cc (AUTOMATE(get_option)): New automate command to
	fetch values from _MTN/options in a supported manner.

2006-08-28  Richard Levitte  <richard@levitte.org>

	* monotone.cc, i18n.h (localize_monotone): New function that does
	the locale and gettext initialization if it isn't already done.
	This can be called from anywhere, even from code that's run before
	main().
	* options.cc (option::localize_string): New function that calls
	localize_monotone(), then localizes a string.  This is currently
	exclusively used by...
	(GOPT, COPT): ... these macros, so option descriptions get
	translated properly.

2006-08-28  Richard Levitte  <richard@levitte.org>

	* po/POTFILES.in: Add options_list.hh, since it contains a lot
	of translatable text.  These strings were previously in
	monotone.cc.
	* po/sv.po: Updated automatically.

2006-08-28  Richard Levitte  <richard@levitte.org>

	* po/sv.po: A few fuzzies to fix.

2006-08-28  Thomas Moschny  <thomas.moschny@gmx.de>

	* m4/ax_create_stdint_h.m4 (ac_cv_stdint_message): Change the
	still not portable `head -n 1' into a `sed 1q'.

2006-08-28  Thomas Moschny  <thomas.moschny@gmx.de>

	* m4/ax_create_stdint_h.m4 (ac_cv_stdint_message): Correct
	non-portable option to the `head' command.

2006-08-27  Nathaniel Smith  <njs@pobox.com>
